176-button tracking fixed, removed deprecated url attribute on buttons

--- a/src/scaffolding/master.scaffolding.hbs
+++ b/src/scaffolding/master.scaffolding.hbs
@@ -11,10 +11,10 @@
                 Evolve your UI to stay ahead of developments on the web and in your company. Gain control of all your websites, Apps or IoT - using a single library of Web Components.
             </p>
             <bio-link-button title="See how it works" modifier="whiteText mediumLong"
-                data-resources="[{paths: ['components/BioLinkButton/index.js']}]" url="#benefits">
+                data-resources="[{paths: ['components/BioLinkButton/index.js']}]" href="#benefits">
             </bio-link-button>
             <bio-link-button title="See Docs" modifier="blue whiteText mediumLong"
-                data-resources="[{paths: ['components/BioLinkButton/index.js']}]" url="https://github.com/biotope/biotope/blob/master/docs/quickstart.md">
+                data-resources="[{paths: ['components/BioLinkButton/index.js']}]" href="https://github.com/biotope/biotope/blob/master/docs/quickstart.md">
             </bio-link-button>
         </div>
     </div>
@@ -118,34 +118,34 @@
                 <h3 class="resources__headline--blue">Code & Resources</h3>
                 <bio-resource logo-baseline image-border-color="blue" data-resources="[{paths: ['components/BioResource/index.js']}]" imgsrc="_assets/github-logo.svg">
                     <p>See the Biotope code on GitHub</p>
-                    <bio-link-button title="Github" modifier="blue alignRight" url="https://github.com/biotope"></bio-link-button>
+                    <bio-link-button title="Github" modifier="blue alignRight" href="https://github.com/biotope"></bio-link-button>
                 </bio-resource>
                 <bio-resource image-border-color="blue" data-resources="[{paths: ['components/BioResource/index.js']}]" imgsrc="_assets/npm.svg">
                     <p>Get the latest version of the Biotope CLI tool from npm</p>
-                    <bio-link-button title="NPM" modifier="blue alignRight" url="https://www.npmjs.com/package/biotope"></bio-link-button>
+                    <bio-link-button title="NPM" modifier="blue alignRight" href="https://www.npmjs.com/package/biotope"></bio-link-button>
                 </bio-resource>
                 <bio-resource image-border-color="blue" data-resources="[{paths: ['components/BioResource/index.js']}]" imgsrc="_assets/documentation.svg">
                     <p>Read the Biotope documentation</p>
-                    <bio-link-button title="Read docs" modifier="blue alignRight" url="https://github.com/biotope/biotope/blob/master/docs/quickstart.md"></bio-link-button>
+                    <bio-link-button title="Read docs" modifier="blue alignRight" href="https://github.com/biotope/biotope/blob/master/docs/quickstart.md"></bio-link-button>
                 </bio-resource>
             </div>
             <div class="col col--large-6">
                 <h3>Tutorials</h3>
                 <bio-resource data-resources="[{paths: ['components/BioResource/index.js']}]" imgsrc="_assets/tutorial-icon.svg">
                     <p>Create Web Components with Biotope-Element</p>
-                    <bio-link-button title="Read" modifier="alignRight" url="https://element.biotope.sh/docs/"></bio-link-button>
+                    <bio-link-button title="Read" modifier="alignRight" href="https://element.biotope.sh/docs/"></bio-link-button>
                 </bio-resource>
                 <bio-resource data-resources="[{paths: ['components/BioResource/index.js']}]" imgsrc="_assets/tutorial-icon.svg">
                     <p>Check out an example website built with Biotope</p>
-                    <bio-link-button title="Read" modifier="alignRight" url="https://github.com/biotope/website"></bio-link-button>
+                    <bio-link-button title="Read" modifier="alignRight" href="https://github.com/biotope/website"></bio-link-button>
                 </bio-resource>
                 <bio-resource data-resources="[{paths: ['components/BioResource/index.js']}]" imgsrc="_assets/tutorial-icon.svg">
                     <p>Automate your Build process with Biotope-Build</p>
-                    <bio-link-button title="Read" modifier="alignRight" url="https://build.biotope.sh"></bio-link-button>
+                    <bio-link-button title="Read" modifier="alignRight" href="https://build.biotope.sh"></bio-link-button>
                 </bio-resource>
                 <bio-resource data-resources="[{paths: ['components/BioResource/index.js']}]" imgsrc="_assets/expert.svg" border="noBorder">
                     <p>You want to learn more? Ask an expert.</p>
-                    <bio-link-button modifier="full alignRight" title="Contact" url="mailto:coregroup@biotope.sh"></bio-link-button>
+                    <bio-link-button modifier="full alignRight" title="Contact" href="mailto:coregroup@biotope.sh"></bio-link-button>
                 </bio-resource>
             </div>
         </div>
@@ -196,7 +196,7 @@
             <div class="company__leads">
                 <p>Need help setting up your frontend ecosystem? <br>
                     We'd love to support you.</p>
-                <bio-link-button title="Contact VI" modifier="full alignCenter" data-resources="[{paths: ['components/BioLinkButton/index.js']}]" url="mailto:biotope.support@virtual-identity.com"></bio-link-button>
+                <bio-link-button title="Contact VI" modifier="full alignCenter" data-resources="[{paths: ['components/BioLinkButton/index.js']}]" href="mailto:biotope.support@virtual-identity.com"></bio-link-button>
             </div>
         </div>
     </div>
@@ -208,12 +208,12 @@
 
     <div class="row row--reducedWidth">
         <div class="col">
-            <a href="#">
+            <a href="https://github.com/biotope">
                 <img class="footer__githubLogo" src="_assets/github-logo.svg" alt="github octo-cat">
             </a>
             <div class="footer__checkItOut">
                 <p>Of course we also built<br><span class="footer__bigWords">this website</span> with Biotope.</p>
-                <bio-link-button title="See how" modifier="blue" data-resources="[{paths: ['components/BioLinkButton/index.js']}]" url="https://github.com/biotope/website"></bio-link-button>
+                <bio-link-button title="See how" modifier="blue" data-resources="[{paths: ['components/BioLinkButton/index.js']}]" href="https://github.com/biotope/website"></bio-link-button>
             </div>
             <div class="footer__essentials">
                 <a class="js-openModal" modalType="imprint">Imprint</a>
