fixed mailto link button "contact VI"

--- a/src/scaffolding/master.scaffolding.hbs
+++ b/src/scaffolding/master.scaffolding.hbs
@@ -196,7 +196,7 @@
             <div class="company__leads">
                 <p>Need help setting up your frontend ecosystem? <br>
                     We'd love to support you.</p>
-                <bio-link-button title="Contact VI" modifier="full alignCenter" data-resources="[{paths: ['components/BioLinkButton/index.js']}]" url="mailto:support@biotope.sh"></bio-link-button>
+                <bio-link-button title="Contact VI" modifier="full alignCenter" data-resources="[{paths: ['components/BioLinkButton/index.js']}]" href="mailto:support@biotope.sh"></bio-link-button>
             </div>
         </div>
     </div>
