added missing classes "white" and "compact" to the BioButton styles to show the correct styling (white border, white text color, smaller width on smaller devices) in the cookie banner. Removed not used "compact" class from BioLinkButton because these have a fixed width of 160px and therefore the min-width in the compact class did not have any effect.

--- a/src/components/BioButton/styles.scss
+++ b/src/components/BioButton/styles.scss
@@ -26,8 +26,26 @@
 			color: $bio-white;
 		}
 
-        &.long {
+		&.long {
 			padding: 10px 15px;
+		}
+
+		&.white {
+			border: $border solid $bio-white;
+			color: $bio-white;
+			
+			&:hover{
+				background: $bio-white;
+				color: $bio-orange;
+			}
+		}
+		
+		&.compact {
+			min-width: 130px;
+			
+			@include breakpoint($medium){
+				min-width: 160px;
+			}
 		}
 	}
 }
