--- a/src/pages/01site.01master.hbs
+++ b/src/pages/01site.01master.hbs
@@ -12,4 +12,5 @@ description: Master page
 
 {{> layouts/layout.default
 	contentMain="scaffolding/master.scaffolding"
+	canonical="https://biotope.sh"
 }}
