--- a/src/scaffolding/master.scaffolding.hbs
+++ b/src/scaffolding/master.scaffolding.hbs
@@ -278,7 +278,7 @@
                     </bio-collaborator-tile>
                     <bio-collaborator-tile imgsrc="https://avatars3.githubusercontent.com/u/41577958?s=460&v=4" github="https://github.com/filipemartinsfe">Filipe Martins
                     </bio-collaborator-tile>
-                    <bio-collaborator-tile imgsrc="https://avatars1.githubusercontent.com/u/7582607?s=460&v=4" github="https://github.com/clemensf">Clemens Fiedler
+                    <bio-collaborator-tile imgsrc="https://avatars1.githubusercontent.com/u/59684329?s=460&v=4" github="https://github.com/clemens-vi">Clemens Fiedler
                     </bio-collaborator-tile>
                     <bio-collaborator-tile imgsrc="https://avatars3.githubusercontent.com/u/32572354?s=460&v=4" github="https://github.com/bennyvi">Benjamin Konopka
                     </bio-collaborator-tile>
