--- a/src/components/BioButton/scaffolding/BioButton.hbs
+++ b/src/components/BioButton/scaffolding/BioButton.hbs
@@ -1,7 +1,7 @@
 <bio-button title="Watch" data-resources="[{paths: ['components/BioButton/index.js']}]"></bio-button>
 <bio-button title="Watch" modifier="whiteText" data-resources="[{paths: ['components/BioButton/index.js']}]"></bio-button>
 <bio-button title="Who's behind Biotope" modifier="long" data-resources="[{paths: ['components/BioButton/index.js']}]"></bio-button>
-<bio-button title="Github" modifier="blue" data-resources="[{paths: ['components/BioButton/index.js']}]"></bio-button>
+<bio-button title="Github" data-resources="[{paths: ['components/BioButton/index.js']}]"></bio-button>
 <bio-button title="Contact" modifier="full" data-resources="[{paths: ['components/BioButton/index.js']}]"></bio-button>
 <div style="background: #F17C61; padding: 10px; margin-top: 10px;">
     <bio-button title="Accept" modifier="white" data-resources="[{paths: ['components/BioButton/index.js']}]"></bio-button>
