hotfix release branch (#199)
* init biotope instance

* docs(readme.md): init README for project

Previously, the README was the default for biotope-boilerplate. Now it's a custom one for the
website-project.

* feat: add commitizen

Added CLI tool commitizen as commit standard for the project.

* feat: remove jekyll config

Removed Jekyll configuration file. This site will no longer use Jekyll.

BREAKING CHANGE: Site will no longer work with GitHub Pages

* feat: add BioButton component

First componenent, mostly to get started.

* fix: change path to component inside page file

There's a bug in biotope-generate, that needed to be fixed here.
https://github.com/biotope/biotope-generator/issues/50

* fix: change version of biotope-build to temporary fix branch

There's a bug in biotope-build. I uncommented the faulty gulp-task in a branch and reference this
branch here.

* fix: change to biotope-build 0.6.2

'next' and 7.0.0 seem to be broken

BREAKING CHANGE: npm install required

* fix: use temporary biotope-build branch to fix build

* fix: add empty hbs file, revert to build 6.2.0

There's a bug in biotope: when you don't have any client-side templates yet (src/resources/hbs), the
build breaks. Adding a file there fixes it.

* revert: revert back to build next

* fix: try resource loader relative path

* fix: add / to staticResources

* fix: biotope-build v7.1.0-2

* chore: add .vscode to .gitignore

* feat: add placeholder header and footer

* biotope website:
- updated biotope-build and biotope-element to latest versions
- updated node engine to 10.16.1 (LTS)
- npm audit fix

* biotope website:
- re-structured the content template: moved everything in content.main.hbs

* add basic first section, add github corner component, clean up

* remove console.log

* add placeholder buttons

* extrapolate styling of github corner to seperate css fle

* #23 button component (#28)

* initial state o

--- a/src/components/BioEasySetUp/styles.scss
+++ b/src/components/BioEasySetUp/styles.scss
@@ -8,14 +8,14 @@
         grid-template-columns: 70px 1fr;
         column-gap: 10px;
         padding: 40px 0;
+        
         @include breakpoint($large) {
             -ms-grid-columns: 1fr 70px 1fr;
             grid-template-columns: 1fr 70px 1fr;
             min-height: 165px;
             padding: 0 0 190px 0;
             &.left {
-                .text-wrapper,
-                .code {
+				.text-wrapper, .code{
                     -ms-grid-column: 1;
                     grid-column: 1;
                 }
@@ -52,6 +52,7 @@
             border-radius: 10px;
             box-shadow: 2px 2px 8px $bio-shadow-gray;
             font-weight: $font-weight-bold;
+			
             @include breakpoint($large) {
                 -ms-grid-column: 3;
                 grid-column: 3;
@@ -60,6 +61,7 @@
             }
             .copy-code {
                 display: none;
+				
                 @include breakpoint($medium) {
                     display: block;
                     opacity: 0;
@@ -91,6 +93,7 @@
             grid-column: 2;
         }
     }
+	
     &:host([bloated]) {
         @include breakpoint($large) {
             .code {
