--- a/src/components/BioLinkButton/scaffolding/BioLinkButton.hbs
+++ b/src/components/BioLinkButton/scaffolding/BioLinkButton.hbs
@@ -1,5 +1,8 @@
-<bio-link-button title="Watch" data-resources="[{paths: ['components/BioLinkButton/index.js']}]" url="https://www.biotope.sh"></bio-link-button>
-<bio-link-button title="Watch" modifier="whiteText" data-resources="[{paths: ['components/BioLinkButton/index.js']}]" url="https://www.biotope.sh"></bio-link-button>
-<bio-link-button title="Who's behind Biotope" modifier="long" data-resources="[{paths: ['components/BioLinkButton/index.js']}]" url="https://www.biotope.sh"></bio-link-button>
-<bio-link-button title="Github" modifier="blue" data-resources="[{paths: ['components/BioLinkButton/index.js']}]" url="https://www.biotope.sh"></bio-link-button>
-<bio-link-button title="Contact" modifier="full" data-resources="[{paths: ['components/BioLinkButton/index.js']}]" url="https://www.biotope.sh"></bio-link-button>
+<bio-link-button title="Watch" data-resources="[{paths: ['components/BioLinkButton/index.js']}]" href="https://www.biotope.sh"></bio-link-button>
+<bio-link-button title="Watch" modifier="whiteText" data-resources="[{paths: ['components/BioLinkButton/index.js']}]" href="https://www.biotope.sh"></bio-link-button>
+<bio-link-button title="Who's behind Biotope" modifier="long" data-resources="[{paths: ['components/BioLinkButton/index.js']}]" href="https://www.biotope.sh"></bio-link-button>
+<bio-link-button title="Github" modifier="blue" data-resources="[{paths: ['components/BioLinkButton/index.js']}]" href="https://www.biotope.sh"></bio-link-button>
+<bio-link-button title="Contact" modifier="full" data-resources="[{paths: ['components/BioLinkButton/index.js']}]" href="https://www.biotope.sh"></bio-link-button>
+<div style="background: #F17C61; padding: 10px; margin-top: 10px;">
+    <bio-link-button title="Read" modifier="white" data-resources="[{paths: ['components/BioLinkButton/index.js']}]" href="https://www.biotope.sh"></bio-link-button>
+</div>
