--- a/src/components/BioButton/styles.scss
+++ b/src/components/BioButton/styles.scss
@@ -1,29 +1,51 @@
 @import "node_modules/@biotope/element/lib/host.mixin";
 @import '../../resources/scss/defaultSassImports.scss';
+
 @include host("bio-button") {
-    button {
-        $border: 2px;
-        min-width: 160px;
-        padding: 10px 20px;
-        background: transparent;
-        color: $bio-black;
-        border: $border solid $bio-orange;
-        border-radius: 50px;
-        font-family: $font-family-titles;
-        font-size: 15px;
-        font-weight: $font-weight-light;
-        text-transform: uppercase;
-        text-decoration: none;
-        text-align: center;
-        transition: 0.15s ease-out;
-        cursor: pointer;
-        &:hover {
-            border: 2px solid transparent;
-            background: $bio-orange;
-            color: $bio-white;
-        }
-        &.long {
-            padding: 10px 15px;
-        }
-    }
+	button {
+		$border: 2px;
+
+		min-width: 160px;
+		padding: 10px 20px;
+		background: transparent;
+		color: $bio-black;
+		border: $border solid $bio-orange;
+		border-radius: 50px;
+		font-family: $font-family-titles;
+		font-size: 15px;
+		font-weight: $font-weight-light;
+		text-transform: uppercase;
+		text-decoration: none;
+		text-align: center;
+		transition: 0.15s ease-out;
+		cursor: pointer;
+
+		&:hover {
+			border: 2px solid transparent;
+			background: $bio-orange;
+			color: $bio-white;
+		}
+
+		&.long {
+			padding: 10px 15px;
+		}
+
+		&.white {
+			border: $border solid $bio-white;
+			color: $bio-white;
+			
+			&:hover{
+				background: $bio-white;
+				color: $bio-orange;
+			}
+		}
+		
+		&.compact {
+			min-width: 130px;
+			
+			@include breakpoint($medium){
+				min-width: 160px;
+			}
+		}
+	}
 }
