--- a/src/resources/scss/global.scss
+++ b/src/resources/scss/global.scss
@@ -1,412 +1,497 @@
 @import 'defaultSassImports.scss';
+
 body {
-    overflow-x: hidden;
+	overflow-x: hidden;
 }
 
 section {
-    h3 {
-        @extend %sectionHeadline;
-        color: $bio-darkest-blue;
-        text-transform: uppercase;
-        strong {
-            @extend %sectionHeadlineStrong;
-            color: $bio-light-orange;
-        }
-        &.inverted {
-            color: $bio-white;
-        }
-    }
+	h3 {
+		@extend %sectionHeadline;
+		color: $bio-darkest-blue;
+		text-transform: uppercase;
+
+		strong {
+			@extend %sectionHeadlineStrong;
+			color: $bio-light-orange;
+		}
+
+		&.inverted {
+			color: $bio-white;
+		}
+	}
 }
 
 .splash {
-    font-family: $font-family-titles;
-    height: 800px;
-    background-image: url(../../_assets/splashscreen.svg);
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
-    color: $bio-orange;
-    @include breakpoint($large) {
-        height: 110vh;
-    }
-    &__intro {
-        display: flex;
-        flex-flow: column;
-        padding-top: 50px;
-        @include breakpoint($large) {
-            flex-flow: row;
-            justify-content: center;
-        }
-        @include breakpoint($xxlarge) {
-            padding-top: 200px;
-        }
-    }
-    &__logo {
-        width: 120px;
-        margin: 0 auto;
-        @include breakpoint($large) {
-            width: 200px;
-            height: 280px;
-            margin: 0 0 auto 0;
-        }
-    }
-    &__biotope {
-        padding: 10px 0;
-        letter-spacing: 2px;
-        font-weight: 400;
-        @include breakpoint($large) {
-            margin-left: -6px;
-        }
-    }
-    &__content {
-        position: relative;
-        padding: 0 35px;
-        text-align: center;
-        @include breakpoint($large) {
-            padding: 100px 0 0 25px;
-            text-align: left;
-        }
-    }
-    &__uitoolchain {
-        width: 200px;
-        margin: 0 auto;
-        font-size: 16px;
-        font-weight: 400;
-        line-height: 23px;
-        @include breakpoint($large) {
-            width: auto;
-            margin: 0;
-            font-size: 24px;
-        }
-    }
-    &__claim {
-        color: $bio-white;
-        max-width: 450px;
-        margin: 0 auto;
-        padding: 20px 0;
-        font-size: 15px;
-        font-weight: 400;
-        line-height: 23px;
-        @include breakpoint($large) {
-            margin: 0;
-            padding: 30px 0 20px 0;
-            font-size: 18px;
-            max-width: 515px;
-            line-height: 27px;
-        }
-    }
-    bio-link-button {
-        display: inline-block;
-        margin-bottom: 10px;
-        @include breakpoint($large) {
-            margin-right: 15px;
-        }
-    }
+	font-family: $font-family-titles;
+	height: 800px;
+	background-image: url(../../_assets/splashscreen.svg);
+	background-size: cover;
+	background-repeat: no-repeat;
+	background-position: center; 
+	color: $bio-orange;
+
+	@include breakpoint($large) {
+		height: 110vh;
+	}
+
+	&__intro {
+		display: flex;
+		flex-flow: column;
+		padding-top: 50px;
+
+		@include breakpoint($large) {
+			flex-flow: row;
+			justify-content: center;
+		}
+
+		@include breakpoint($xxlarge) {
+			padding-top: 200px;
+		}
+	}
+
+	&__logo {
+		width: 120px;
+		margin: 0 auto;
+
+		@include breakpoint($large) {
+			width: 200px;
+			height: 280px;
+			margin: 0 0 auto 0;
+		}
+	}
+
+	&__biotope {
+		padding: 10px 0;
+		letter-spacing: 2px;
+		font-weight: 400;
+
+		@include breakpoint($large) {
+			margin-left: -6px;
+		}
+	}
+
+	&__content {
+		position: relative;
+		padding: 0 35px;
+		text-align: center;
+
+		@include breakpoint($large) {
+			padding: 100px 0 0 25px;
+			text-align: left;
+		}
+	}
+
+
+	&__uitoolchain {
+		width: 200px;
+		margin: 0 auto;
+		font-size: 16px;
+		font-weight: 400;
+		line-height: 23px;
+
+		@include breakpoint($large) {
+			width: auto;
+			margin: 0;
+			font-size: 24px;
+		}
+	}
+
+	&__claim {
+		color: $bio-white;
+		max-width: 450px;
+		margin: 0 auto;
+		padding: 20px 0;
+		font-size: 15px;
+		font-weight: 400;
+		line-height: 23px;
+		
+		@include breakpoint($large) {
+			margin: 0;
+			padding: 30px 0 20px 0;
+			font-size: 18px;
+			max-width: 515px;
+			line-height: 27px;
+		}
+	}
+
+	bio-link-button {
+		display: inline-block;
+		margin-bottom: 10px;
+
+		@include breakpoint($large) {
+			margin-right: 15px;
+		}
+	}
 }
 
 .benefits {
-    @include clearfix();
-    position: relative;
-    &__claim {
-        margin: 20px 0 80px 0;
-        text-align: center;
-        >div {
-            @include breakpoint($medium) {
-                flex: 1;
-            }
-        }
-        img {
-            max-height: 400px;
-            @include breakpoint($medium) {
-                flex: 1;
-            }
-        }
-        @include breakpoint($medium) {
-            display: flex;
-            justify-content: space-around;
-            text-align: left;
-        }
-        @include breakpoint($large) {
-            width: 87%;
-        }
-    }
-    &__claimText {
-        margin: auto;
-        h3 {
-            text-transform: none;
-        }
-    }
-    &__container {
-        @include clearfix();
-        @include breakpoint($medium) {
-            @include span(10);
-            float: none;
-            margin: 0 auto;
-        }
-        bio-benefit {
-            @include breakpoint($medium) {
-                @include span(4);
-            }
-        }
-    }
-    .row {
-        margin-top: 0;
-    }
-    .col {
-        margin-top: 0;
-    }
+	@include clearfix();
+	position: relative;
+
+	&__claim {
+		margin: 20px 0 80px 0;
+		text-align: center;
+
+		> div {
+			@include breakpoint($medium) {
+				flex: 1;
+			}
+		}
+
+		img {
+			max-height: 400px;
+
+			@include breakpoint($medium) {
+				flex: 1;
+			}
+		}
+
+		@include breakpoint($medium) {
+			display: flex;
+			justify-content: space-around;
+			text-align: left;
+		}
+
+		@include breakpoint($large) {
+			width: 87%;
+		}
+	}
+
+	&__claimText {
+		margin: auto;
+
+		h3{
+			text-transform: none;
+		}
+	}
+
+	&__container {
+		@include clearfix();
+		@include breakpoint($medium) {
+			@include span(10);
+			float: none;
+			margin: 0 auto;
+		}
+
+		bio-benefit {
+			@include breakpoint($medium) {
+				@include span(4);
+			}
+		}
+	}
+
+	.row {
+		margin-top: 0;
+	}
+
+	.col {
+		margin-top: 0;
+	}
 }
 
 .installation {
-    @include clearfix();
-    position: relative;
-    background-image: url("../../_assets/BioEasySetUp/background.svg");
-    background-size: cover;
-    &__intro {
-        position: relative;
-        z-index: 3;
-        background: rgba(248, 251, 253, 0.5);
-        @include breakpoint($large) {
-            min-height: 350px;
-            p {
-                width: 45%;
-            }
-        }
-    }
-    &__line {
-        display: none;
-        @include breakpoint($large) {
-            display: block;
-            position: absolute;
-            top: -215px;
-            left: calc(50% - 38px);
-            z-index: 2;
-        }
-        @include breakpoint($xxlarge) {
-            left: calc(50% - 38px)
-        }
-    }
+	@include clearfix();
+	position: relative;
+	background-image: url("../../_assets/BioEasySetUp/background.svg");
+	background-size: cover;
+
+	&__intro {
+		position: relative;
+		z-index: 3;
+		background: rgba(248, 251, 253, 0.5);
+
+		@include breakpoint($large) {
+			min-height: 350px;
+
+			p {
+				width: 45%;
+			}
+		}
+	}
+
+	&__line {
+		display: none;
+
+		@include breakpoint($large) {
+			display: block;
+			position: absolute;
+			top: -215px;
+			left: calc(50% - 38px);
+			z-index: 2;
+		}
+
+		@include breakpoint($xxlarge) {
+			left: calc(50% - 38px)
+		}
+	}
 }
 
 .resources {
-    @include clearfix();
-    position: relative;
-    background: $bio-gray;
-    .row {
-        padding: 125px 0;
-        @include breakpoint($large) {
-            padding-top: 200px
-        }
-    }
-    .col {
-        margin-top: 0;
-    }
-    h3 {
-        padding: 40px 0 20px 0;
-        color: $bio-light-orange;
-        text-transform: none;
-        text-align: center;
-        @include breakpoint($large) {
-            padding: 40px 0 0 0;
-        }
-        &.resources__headline--blue {
-            color: $bio-dark-blue;
-        }
-    }
+	@include clearfix();
+	position: relative;
+	background: $bio-gray;
+
+	.row {
+		padding: 125px 0;
+
+		@include breakpoint($large) {
+			padding-top: 200px
+		}
+	}
+
+	.col {
+		margin-top: 0;
+	}
+
+	h3 {
+		padding: 40px 0 20px 0;
+		color: $bio-light-orange;
+		text-transform: none;
+		text-align: center;
+
+		@include breakpoint($large) {
+			padding: 40px 0 0 0;
+		}
+
+		&.resources__headline--blue {
+			color: $bio-dark-blue;
+		}
+	}
 }
 
 .whosBehind {
-    &__headline {
-        margin: 50px 0;
-    }
-    &__list {
-        display: flex;
-        flex-direction: row;
-        flex-wrap: wrap;
-        justify-content: center;
-        @include breakpoint($medium) {
-            justify-content: space-between;
-        }
-    }
+
+	&__headline {
+		margin: 50px 0;
+	}
+
+	&__list {
+		display: flex;
+		flex-direction: row;
+		flex-wrap: wrap;
+		justify-content: center;
+
+		@include breakpoint($medium) {
+			justify-content: space-between;
+		}
+	}
 }
 
-.imprint,
-.privacyPolicy {
-    h3 {
-        font-size: 50px;
-    }
-    h4 {
-        padding-top: 30px;
-    }
-    strong {
-        font-weight: 600;
-    }
-    p {
-        background: rgba(248, 251, 253, 0.5);
-    }
-    @include breakpoint($large) {
-        p {
-            width: 50%;
-        }
-    }
-    a {
-        color: $bio-dark-blue;
-        &.internal {
-            color: $bio-light-orange;
-            &:hover {
-                color: $bio-orange;
-            }
-        }
-        &:hover {
-            color: $bio-darker-blue;
-        }
-    }
+.imprint, .privacyPolicy {
+	h3 {
+		font-size: 50px;
+	}
+
+	h4 {
+		padding-top: 30px;
+	}
+
+	strong {
+		font-weight: 600;
+	}
+
+	p {
+		background:rgba(248, 251, 253, 0.5);
+	}
+
+	@include breakpoint($large) {
+		p {
+			width: 50%;
+		}
+	}
+
+	a {
+		color: $bio-dark-blue;
+
+		&.internal{
+			color: $bio-light-orange;
+			
+			&:hover{
+				color: $bio-orange;
+			}
+		}
+
+		&:hover {
+			color: $bio-darker-blue;
+		}
+	}
 }
+
 
 .extendedBenefits {
-    @include clearfix();
-    position: relative;
-    background: $bio-darkest-blue;
-    .row {
-        padding-top: 20px;
-    }
-    &__container {
-        padding: 50px 0;
-        @include clearfix();
-        @include breakpoint($medium) {
-            @include span(10);
-            float: none;
-            margin: 0 auto;
-        }
-        bio-benefit {
-            @include breakpoint($medium) {
-                @include span(4);
-            }
-        }
-    }
+	@include clearfix();
+	position: relative;
+	background: $bio-darkest-blue;
+
+	.row {
+		padding-top: 20px;
+	}
+
+	&__container {
+		padding: 50px 0;
+
+		@include clearfix();
+		@include breakpoint($medium) {
+			@include span(10);
+			float: none;
+			margin: 0 auto;
+		}
+
+		bio-benefit {
+			@include breakpoint($medium) {
+				@include span(4);
+			}
+		}
+	}
 }
 
 .company {
-    @include clearfix();
-    position: relative;
-    .row {
-        padding: 100px 0;
-    }
-    &__logos {
-        display: flex;
-        justify-content: space-around;
-        @include breakpoint($medium) {
-            padding: 0 50px;
-            margin-top: 90px;
-        }
-        img {
-            width: 150px;
-            margin-right: 10px;
-            display: none;
-            @include breakpoint($medium) {
-                margin-right: 0;
-            }
-            &:last-child {
-                margin-right: 0;
-            }
-            &:nth-child(1),
-            &:nth-child(2) {
-                display: block;
-            }
-            @include breakpoint($medium) {
-                &:nth-child(3),
-                &:nth-child(4) {
-                    display: block;
-                }
-            }
-            @include breakpoint($large) {
-                &:nth-child(5),
-                &:nth-child(6) {
-                    display: block;
-                }
-            }
-        }
-    }
-    &__leads {
-        text-align: center;
-        @include breakpoint($medium) {
-            margin-top: 90px;
-            padding-bottom: 90px;
-        }
-        p {
-            @extend %benefit-text;
-            margin-bottom: 30px;
-        }
-    }
-    .row {
-        margin-top: 0;
-    }
+	@include clearfix();
+	position: relative;
+
+	.row {
+		padding: 100px 0;
+	}
+
+	&__logos {
+		display: flex;
+		justify-content: space-around;
+
+		@include breakpoint($medium) {
+			padding: 0 50px;
+			margin-top: 90px;
+		}
+
+		img {
+			width: 150px;
+			margin-right: 10px;
+			display: none;
+
+			@include breakpoint($medium) {
+				margin-right: 0;
+			}
+
+			&:last-child {
+				margin-right: 0;
+			}
+
+			&:nth-child(1),
+			&:nth-child(2) {
+				display: block;
+			}
+
+			@include breakpoint($medium) {
+				&:nth-child(3),
+				&:nth-child(4) {
+					display: block;
+				}
+			}
+
+			@include breakpoint($large) {
+				&:nth-child(5),
+				&:nth-child(6) {
+					display: block;
+				}
+			}
+		}
+	}
+
+	&__leads {
+		text-align: center;
+
+		@include breakpoint($medium) {
+			margin-top: 90px;
+			padding-bottom: 90px;
+		}
+
+		p {
+			@extend %benefit-text;
+			margin-bottom: 30px;
+		}
+	}
+
+	.row {
+		margin-top: 0;
+	}
 }
 
 .footer {
-    @include clearfix();
-    position: relative;
-    background: $bio-gray;
-    color: $bio-black;
-    .col {
-        @include breakpoint($medium) {
-            display: flex;
-        }
-    }
-    &__githubLogo {
-        display: none;
-        @include breakpoint($medium) {
-            display: block;
-        }
-        @include breakpoint($large) {
-            position: absolute;
-            top: auto;
-            left: auto;
-            bottom: 0;
-            transform: rotate(0);
-            width: auto;
-        }
-    }
-    &__checkItOut {
-        padding-top: 25px;
-        line-height: 1.3;
-        p {
-            margin-top: 0;
-        }
-        @include breakpoint($medium) {
-            flex-grow: 1;
-            padding: 0 0 0 20px;
-            font-size: 20px;
-        }
-        @include breakpoint($large) {
-            padding-left: 17vw;
-        }
-    }
-    &__essentials {
-        display: flex;
-        flex-flow: column;
-        padding: 80px 0 40px 0;
-        @include breakpoint($medium) {
-            padding: 25px 0;
-        }
-        a {
-            margin-bottom: 10px;
-            color: $bio-black;
-            &:hover {
-                text-decoration: underline;
-            }
-            @include breakpoint($large) {
-                margin-bottom: 20px;
-            }
-        }
-    }
+	@include clearfix();
+	position: relative;
+	background: $bio-gray;
+	color: $bio-black;
+
+	.col {
+		@include breakpoint($medium) {
+			display: flex;
+		}
+	}
+	
+	&__githubLogo {
+		display: none;
+
+		@include breakpoint($medium) {
+			display: block;
+		}
+
+		@include breakpoint($large) {
+			position: absolute;
+			top: auto;
+			left: auto;
+			bottom: 0;
+			transform: rotate(0);
+			width: auto;
+		}
+	}
+
+	&__checkItOut {
+		padding-top: 25px;
+		line-height: 1.3;
+
+		p {
+			margin-top: 0;
+		}
+
+		@include breakpoint($medium) {
+			flex-grow: 1;
+			padding: 0 0 0 20px;
+			font-size: 20px;
+		}
+
+		@include breakpoint($large) {
+			padding-left: 17vw;
+		}
+	}
+
+	&__essentials {
+		display: flex;
+		flex-flow: column;
+		padding: 80px 0 40px 0;
+
+		@include breakpoint($medium) {
+			padding: 25px 0;
+		}
+
+		a {
+			margin-bottom: 10px;
+			color: $bio-black;
+			
+			&:hover {
+				text-decoration: underline;
+			}
+
+			@include breakpoint($large) {
+				margin-bottom: 20px;
+			}
+		}
+	}
 }
 
 bio-cookie-banner {
-    position: fixed;
-    bottom: 0;
+	position: fixed;
+	bottom: 0;
 }
 
 .hiddenOnLoad {
-    display: none;
+	display: none;
 }
